# PA9-Final-Project

./: CMakeLists.txt  PA9 Final Project.sln  README.md
PA9 Final Project/: BackgroundAudioTrack.hpp  Bullet.cpp  Bullet.hpp  CrackedPlatform.cpp  CrackedPlatform.hpp  Enemy.cpp  Enemy.hpp  Menu.cpp  Menu.hpp  MovingPlatform.cpp  MovingPlatform.hpp  PA9 Final Project.vcxproj  PA9 Final Project.vcxproj.filters  Platform.cpp  Platform.hpp  Player score.hpp  Player.cpp  Player.hpp  Readme.txt  Test.cpp  Test.hpp  highscore.txt  main.cpp  player score.cpp
